src/objects/ERM_to_FM__c.object
<CustomObject>
    <fields>
        <fullName>Memo_Created_By__c</fullName>
        <label>Memo Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo_Date__c</fullName>
        <label>Memo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memo_Description__c</fullName>
        <label>Memo Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ERM to FM</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Memo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERM to FM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>